argocd/manifests/argocd-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.drewpayment.com"
    external-dns.home.arpa/enabled: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    argocd.argoproj.io/compare-options: IgnoreExtraneous
spec:
  ingressClassName: external
  rules:
  - host: &host 'argocd.drewpayment.com'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  syncPolicy:
    automated: {}
  tls:
  - hosts:
    - *host
    secretName: argocd-server-tls # as expected by argocd-server
